--- a/fifaCA.ipynb
+++ b/fifaCA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9qdX8FCVZFKUcL2ZEys0v",
+      "authorship_tag": "ABX9TyOGmJM3xT0iyy6YnPtBjMAX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1c8ub0f5ed5x",
-        "outputId": "8e489d7a-f933-4c8e-b530-a5f11e436e3f"
+        "outputId": "d4c7bdd6-185e-479d-feef-106ee1175426"
       },
       "outputs": [
         {
@@ -43,7 +43,7 @@
           "text": [
             "                           name   rating  position   height    foot   rare  \\\n",
             "id                                                                           \n",
-            "1001             GÃ¡bor KirÃ¡ly       69        GK      191   Right      0   \n",
+            "1001               Gábor Király       69        GK      191   Right      0   \n",
             "100143             Frederik Boi       65         M      184   Right      0   \n",
             "100264          Tomasz Szewczuk       57         A      185   Right      0   \n",
             "100325   Steeve Joseph-Reinette       63         D      180    Left      0   \n",
@@ -69,7 +69,7 @@
       ],
       "source": [
         "import pandas as pd\n",
-        "fifa_df = pd.read_excel('fifa.xlsx', index_col=0)\n",
+        "fifa_df = pd.read_csv('https://raw.githubusercontent.com/Francesfahey/BigData/main/fifa.csv', index_col=0)\n",
         "print(fifa_df.head())\n"
       ]
     }
